--- a/P_sets/styles.css
+++ b/P_sets/styles.css
@@ -334,3 +334,15 @@ hr.style-two {
 	padding:5px 1px 5px 15px;
 	font-family:'Avenir', 'light'
 }
+/* Answer styles */
+.vtop_zero{vertical-align:top; padding:0 0 0 0}
+.vtop_r20l10{vertical-align:top; padding:0 20 0 10}
+.vtop_lten{vertical-align:top; padding:0 0 0 10}
+.vtop_r20-b15-l10{vertical-align:top; padding:0 20 15 10}
+.pt10{padding:10 0 0 0;}
+.pt10{padding:10 0 0 0;}
+.pt_15{padding:15 0 0 0;}
+.pt_20{padding:20 0 0 0;}
+.pt10_r20{padding:10 20 0 0;}
+.pt20_r20{padding:20 20 0 0;}
+.pt20_r20_b15{padding:20 20 15 0;}
